# AI_OS

./: .gitignore  MCP_SERVERS.md  MODEL_CLASSES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/agents/: analysis.py  base.py  coding.py  communication.py  fast_response.py  planner.py  research.py  vision.py
src/config/: schemas.py  settings.py
src/db/: engine.py  models.py  repo.py
src/eventbus/: __init__.py  bus.py
src/jarvis_logging/: __init__.py  setup.py
src/mcp/: __init__.py  client.py  gateway.py  permission_broker.py
src/mcp/servers/: __init__.py  browser.py  calendar.py  email.py  filesystem.py  input_injection.py  messaging.py  search.py  shell.py
src/memory/: store.py
src/models/: lam.py  llm.py  rag.py  router.py  sam.py  slm.py  vlm.py
src/security/: audit.py  auth.py  sandbox.py
src/services/: speech.py  stt.py  tts.py
src/supervisor/: __init__.py  init.py  watchdog.py
src/ui/: __init__.py  web.py
src/ui/static/: app.js  style.css
src/ui/templates/: index.html
src/utils/: __init__.py  circuit_breaker.py
tests/: conftest.py  test_advanced.py  test_agents.py  test_circuit_breaker.py  test_email_mcp.py  test_eventbus.py  test_filesystem_mcp.py  test_llm_router.py  test_mcp_gateway.py  test_permission_broker.py  test_rag.py  test_sandbox_security.py  test_search_mcp.py  test_ui.py
